--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,3 +1,3 @@
 FROM mysql/mysql-server:latest
 COPY ./mysql/sql-scripts/ /docker-entrypoint-initdb.d/
-COPY ./mysql/ /var/lib/mysql-files
+COPY ./data/ /var/lib/mysql-files
